--- a/css/landing.css
+++ b/css/landing.css
@@ -520,6 +520,53 @@ nav .no-animation {
   font-weight: 500;
 }
 
+.section-4 .container-content .content .cta-button {
+  background: #fff;
+  border: 0.02em solid rgba(0, 0, 0, 0.3);
+  color: #4d13d1;
+  font-weight: 900;
+}
+
+.section-4 .container-content .content .cta-button:hover {
+  background: #4d13d1;
+  color: #fff;
+}
+
+/* Footer */
+footer {
+  background: #fbf8f3;
+  padding: 2em 3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2em;
+}
+
+footer .content .content-list {
+  margin-top: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5em;
+}
+
+footer .content p {
+  font-weight: 500;
+}
+
+footer .content p a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .cta-button {
   font-weight: 700;
   font-size: 1.1em;
