add sign up page

--- a/css/landing.scss
+++ b/css/landing.scss
@@ -9,6 +9,10 @@ $purple-color: #4d13d1;
   font-family: "Inter";
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   position: relative;
